# Anomaly-Detection-Server-Client

./: CLI.cpp  CLI.h  CMakeLists.txt  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  MainTrain.cpp  README.md  Server.cpp  Server.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
